# Symphraelia

./: CMakeLists.txt  CMakeLists.txt copy.bak  LICENSE  README.md  build.sh  doing.txt  vision.txt
.cache/clangd/index/: AKAZEConfig.h.8B61BCE8F4D036C5.idx  AKAZEFeatures.cpp.AF74F47E43CB136B.idx  AKAZEFeatures.h.2F85353F5A267BAE.idx  KAZEConfig.h.C88F686F8CA58694.idx  KAZEFeatures.cpp.3CB00BE2B16D1F28.idx  KAZEFeatures.h.C257356F19F24CFB.idx  Logos.cpp.D0D67A2DE4B3E639.idx  Logos.hpp.8521201E5D0D22B9.idx  Match.cpp.29FCA42498717088.idx  Match.hpp.EAD34E0F02599686.idx  Point.cpp.9CA3108B897E428C.idx  Point.hpp.4126F2DD9E1EBE23.idx  PointPair.cpp.17E2AB22B12BEC38.idx  PointPair.hpp.2BA51B8162D9ACDF.idx  TEvolution.h.1B0605BD7609B6B2.idx  Tracker.cpp.9767976BD1C0B43F.idx  Tracker.hpp.A8D8A2384DA09AB2.idx  _geom.h.2A495EDD230C1D7A.idx  accum.cpp.B56F92D82DA998EB.idx  accum.dispatch.cpp.0B5C203A6BF2F7B2.idx  accum.simd.hpp.3F389B4A719CF65B.idx  affine.hpp.7ABD6DF2D2A575DA.idx  affine_feature.cpp.0730C259E5248E1E.idx  affine_feature2d.cpp.4FC1F30D15C6E79A.idx  agast.cpp.924AE3DC8129C858.idx  agast_score.cpp.E2992E18FA6106DD.idx  agast_score.hpp.4D50DCBD92A929AF.idx  akaze.cpp.3EC9531CB6D2FF72.idx  algorithm.cpp.743BD85722A32D9F.idx  all_indices.h.FDFA017F05387834.idx  alloc.cpp.ECD584838E5CF006.idx  allocator.h.FA5C5171BF69DECD.idx  allocator_stats.hpp.860BE04FEAB7221C.idx  allocator_stats.impl.hpp.B04A9E9F7529C45A.idx  any.cc.EC73840CCFDB7937.idx  any.h.23A8784402E1F87D.idx  any.h.57BDB1DD76EC1398.idx  ap3p.cpp.DB0C4BDFA894B9E3.idx  (+747 more)
src/: Tracker.cpp.bak  Tracker.hpp  main.cpp
